--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,9 @@
     margin: 0;
     border: 0;
 }
+.titulo{
+    font-size: 50px;
+}
 .img{
     height: 20%;
     width: 100%;
@@ -12,18 +15,29 @@
     align-items: center;
 }
 .badge{
-  
+    margin: 1rem 2rem;
     height: 2.5rem;
-    width: 20rem;
+    width: 90%;
 }
 .final{
      justify-content: end;
 
 }
-.texto{
-    height: 100em;
+.email{
+    
+    margin: 0 1rem;
+    color: black;
+    text-decoration: none;
+    
 }
 .ul{
+    align-items: flex-start;
+    margin: 1rem 0;
     display: block;
     list-style: none;
+}
+.display{
+    margin: 0rem 1rem;
+    text-align: left;
+    width: 90%;
 }
